plugins {
    id('java-gradle-plugin')
    id('jvm-test-suite')
    id('jacoco')
    // id('signing')
    alias(libs.plugins.publish)
    alias(libs.plugins.shadow)
    alias(libs.plugins.spotless)
    alias(libs.plugins.versions)
    alias(libs.plugins.jacocolog)
    alias(libs.plugins.spotbugs)
}

group = 'io.github.tomaki19'
version = '0.9.7'

repositories {
    mavenCentral()
}

dependencies {
    compileOnly gradleApi()
    implementation libs.freemarker
    testImplementation libs.bundles.mockito
    spotbugs(libs.spotbugs)
}

java {
  sourceCompatibility = JavaVersion.VERSION_17 // minimal java version supported by Gradle 9
}

gradlePlugin {
    website = 'https://github.com/tomaki19/gradle-cmake-plugin'
    vcsUrl = 'https://github.com/tomaki19/gradle-cmake-plugin.git'
    plugins {
        cmake {
            id = "${project.group}.${project.name}"
            displayName = 'CMake Build Plugin'
            description = 'A Gradle plugin that uses the CMake build framework for C/C++ builds.'
            tags.set(['cmake', 'build', 'native', 'c', 'cpp', 'c++'])
            implementationClass = 'io.github.tomaki19.gradle.cmake.CMakePlugin'
        }
    }
}

spotless {
    java {
        licenseHeaderFile file('gradle/license-header.txt')
        removeUnusedImports()
    }
}

tasks.withType(JavaCompile) {
    dependsOn(tasks.spotlessApply)
}

// signing {
//   required = { hasProperty('signingPassword') && gradle.taskGraph.hasTask('publish') }
//   useGpgCmd()
//   sign publishing.publications
// }

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:-missing', '-quiet')
}

dependencyUpdates {
    group = 'build'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
    }
}

spotbugs {
    excludeFilter.set(file("${projectDir}/spotbugs-exclude.xml"))
}

test {
    finalizedBy jacocoTestReport
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

testing {
    suites {
        test {
            useJUnitJupiter()
        }
        integrationTest(JvmTestSuite) {
            dependencies {
                implementation project()
            }
            targets {
                all {
                    testTask.configure {
                        shouldRunAfter(tasks.test)
                    }
                }
            }
        }
    }
}

check {
    dependsOn(testing.suites.integrationTest)
}

tasks.withType(AbstractPublishToMaven) {
    dependsOn(tasks.check)
}

shadowJar {
    archiveClassifier = ''
}
